--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+dev-clean*
+results
+placeholder_dataset
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
