test of training with notebook example

--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-dev-clean*
 results
-placeholder_dataset
+data/*
+checkpoints/*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
