--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ MANIFEST
 results
 data/*
 checkpoints/*
+wandb
+configs/*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
