--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ data/*
 checkpoints/*
 wandb
 configs/*
+notebooks/*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
